# Optimized-Data-Infrastructure-For-Backtesting-Engine-ODIN-

./: .env.example  .gitignore  README.md  pyproject.toml  questdb-query-1781940224994.csv
.cursor/plans/: odin_backtest_infrastructure_3caad5f0.plan.md
.cursor/rules/: feature-documentation.mdc
benchmarks/: baseline_strykex.py  compare.py  odin_nifty_5m.py
data/: catalog.json
docs/: architecture.md  docker.md  indicator-catalog.md  postgres-schema.md  questdb-schema.md  strykex-integration.md
infra/: Dockerfile  docker-compose.yml
infra/postgres/init/: 001_schema.sql  002_indicator_catalog.sql
manager-report/: Project ODIN Prototype.docx  README.md  index.html  styles.css
scripts/: import_csv_to_questdb.py  init_database.py  load_sample_data.py  prewarm_cache.py  run_nightly_etl.py  seed_data.py  seed_indicator_catalog.py  setup_questdb_pipeline.py  sync_postgres.py
services/nightly_etl/: export.py  precompute.py
services/odin_api/: main.py  strykex_adapter.py
tests/: test_basic.py
