[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odin"
version = "0.1.0"
description = "Optimized Data Infrastructure for NSE Backtesting Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "polars>=0.20",
    "pyarrow>=15",
    "pandas>=2.0",
    "numpy>=1.26",
    "numba>=0.59",
    "redis>=5.0",
    "psycopg[binary]>=3.1",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "ray>=2.9",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.3"]

[tool.setuptools]
package-dir = {"" = "packages"}

[tool.setuptools.packages.find]
where = ["packages"]
include = ["odin_*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages"]
